
FreeRapid Downloader 0.86
  Added : Support for Portuguese and Simplified Chinese languages - thanks to all translators!
  Added : If the same file is downloaded from multiple sources, duplicates are automatically skipped
  Added : Support for preventing standby while downloading
  Added : Support for using system recycle bin for deleting files
  Changed : Speed up startup time 
  Changed : Internal - NirCmd is not used anymore for native Windows actions
  Changed : Internal - Updated BetterSwingApplicationFramework to v1.9.3 snapshot
  Changed : Internal - Updated jna, mina, and commons-codec libraries to their latest versions
  Changed : Internal - Updated look and feel libraries
  Fixed : Java 7 compatibility issues

1st January 2011 - FreeRapid Downloader 0.85 Update 1
  Added : Support for Polish, Bulgarian, Korean, Portuguese (Brasil), Finnish and Hebrew languages - thanks to all translators!
  Added : Support for grouping FRD application in taskbar for Windows 7
  Added : Experimental - you have to enable it manually in startup.properties file for now
        - Support for deleting files to recycle bin
        - Support for searching subtitles on opensubtitles.org (popmenu on selected files)
  Added : Plugin API
           - ScriptUtils class for easy JavaScript manipulation
  Changed: Internal - enhanced ESET antivirus detection, which is blocking FRD to start
  Changed: Internal - enhanced detection of not writable plugins directory
  Changed: Internal - list of languages is represented in file languages.xml, languages.properties was removed
  Fixed: Internal - plugin API - small problem in MethodBuilder when parsing name attribute
  Fixed: Linux - cannot connect server problem - frd.sh was updated

16th November 2010 - FreeRapid Downloader 0.85 build 555
  Changed: UA translation is now available
  Fixed: plugin updates glitch

14th November 2010 - FreeRapid Downloader 0.85